--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Sim ou Não</title>
   </head>
-  <body>
+  <body onresize="tamanhoJogo()">
     <div class="card" id="card">
       <div class="question" id="question">
         <p>################</p>
