--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body onresize="tamanhoJogo()">
     <div class="card" id="card">
       <div class="question" id="question">
-        <p>################</p>
+        <p>Aceitaria uma boiolagem de dia dos namorados?</p>
         <div class="buttons">
           <button id="yes" class="btn-yes">Sim!</button>
           <button id="no" class="btn-no">Não</button>
