--- a/love.html
+++ b/love.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dia dos namorados</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
     <div id="principal">
-        <p></p>
+        <h3>Feliz dia dos namorados!!</h3>
+        <p>Eu estou realmente estou muito feliz por estar comemorando este dia com você, sinceramento não achei que chegariamos tão longe (que você me aguentaria no casokkkk), mas fico feliz que estamos indo tão bem. Olha talvez eu não entenda oque o amarelo foi para Van Gogh, ou oque a Alaska foi para o bujão, mas se estas coisas tiverem 1/3 do significado que você está tendo na minha vida elas definitivamente foram importantes. Obrigado por me fazer acreditar no amor e me mostrar que a vida não precisa ser tão solitária. Te amo!</p>
     </div>
 </body>
 </html>
